<resources>
    <string name="title_drawer_uploadsettings">Upload settings</string>
    <string name="settings_screen_name">GNSSLogger Settings</string>
    <string name="menu_annotate">Annotate</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="settings_accuracy_in_meters">Accuracy in meters</string>
    <string name="settings_enter_meters">Enter meters(max 9999)</string>
    <string name="live_format_settings">Live logging settings</string>
    <string name="file_format_settings">Log file formats</string>
    <string name="pref_logging_title">Logging details</string>
    <string name="log_gpx_title">Log to GPX 1.0</string>
    <string name="log_gpx_summary">Logs locations to a GPX v1.0 file</string>
    <string name="log_gpx_11_title">Use GPX 1.1</string>
    <string name="log_gpx_11_summary">Uses GPX 1.1 file format instead of GPX 1.0</string>
    <string name="log_kml_title">Log to KML</string>
    <string name="log_kml_summary">Logs locations to a KML v2.2 file</string>
    <string name="log_plain_text_title">Log to CSV</string>
    <string name="log_plain_text_summary">Logs locations to a CSV file</string>
    <string name="log_json_title">Log to GeoJSON</string>
    <string name="log_json_summary">Logs locations to a GeoJSON file</string>
    <string name="new_file_creation_title">New file creation</string>
    <string name="new_file_creation_summary">Whether to create a new file once a day or each time you start.</string>
    <string name="new_file_custom_title">Custom file name</string>
    <string name="new_file_custom_summary">You can use your own file name.
        Optionally add a few dynamic parameters such as serial number, year, hour, minute, etc. Very dynamic file names
        may not work well with auto send features because it only sends the latest file.</string>
    <string name="pref_performance_title">Performance</string>
    <string name="time_before_logging_title">Logging interval</string>
    <string name="time_before_logging_summary">Use 0 for maximum frequency, but slower is better for battery life.
    </string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="time_before_logging_hint">Enter seconds (max 9999)</string>
    <string name="keep_fix_summary">Be careful, this will dramatically decrease the battery life. Use only for
        higher precision with low frequencies.
    </string>
    <string name="keep_fix_title">Keep GPS on between fixes</string>
    <string name="retry_time_title">Duration to match accuracy</string>
    <string name="retry_time_summary">After acquiring an initial fix, keep trying for this long to get an accurate point to match the accuracy filter setting.</string>
    <string name="display_imperial_title">Display Imperial units</string>
    <string name="display_imperial_summary">Display feet, miles and pints, none of that newfangled metric stuff. (Preferences must still be in metrics)</string>
    <string name="enabledisablegps_title">Enable/Disable GPS</string>
    <string name="enabledisablegps_summary">Go to the phone settings to enable or disable the providers.</string>
    <string name="startOnBootUp_title">Start on bootup</string>
    <string name="startOnBootUp_summary">Launch app and start logging when phone starts</string>
    <string name="startOnApplicationLaunch_title">Start on app launch</string>
    <string name="startOnApplicationLaunch_summary">Start logging when the app is launched</string>
    <string name="autoemail_frequency_whenistop">When I press stop</string>
    <string name="osm_resetauth">Clear authorization</string>
    <string name="debuglog_title">Write to debug file</string>
    <string name="debuglog_summary">Writes debug messages to a file on the SD card. Warning: The file grows very fast.
    </string>
    <string name="pref_logging_summary">File types, creation and naming</string>
    <string name="pref_general_title">General Options</string>
    <string name="menu_upload">Upload</string>
    <string name="autoUpload_enabled">Allow auto sending</string>
    <string name="autoUpload_enabled_summary">Allows sending the files to various targets</string>
    <string name="autoUpload_frequency_summary">How frequently log files should be sent, in minutes. Set to 0 to disable this.</string>
    <string name="autoUpload_frequency">How often?</string>
    <string name="autoUpload_send_zip_title">Send zip file</string>
    <string name="autoUpload_send_zip_summary">Send zip file where applicable. Disable to send individual files, or if the zip option is not
        working for you
    </string>
    <string name="autoUpload_targets_category">Auto Send Targets</string>
    <string name="menu_autoUpload_now">Auto Send Now</string>
    <string name="pref_autoUpload_title">Auto send file</string>
    <string name="pref_autoUpload_summary">Share and upload options</string>
    <string name="ftp_setup_title">FTP</string>
    <string name="ftp_username">Username</string>
    <string name="ftp_password">Password</string>
    <string name="ftp_advanced_settings">Advanced settings</string>
    <string name="ftp_server">FTP Server</string>
    <string name="ftp_port">Port</string>
    <string name="ftp_useftps">Use FTPS</string>
    <string name="ftp_useftps_summary">Enable FTP over SSL. SSL/TLS and Implicit are ignored if this is unchecked.</string>
    <string name="ftp_ssltls">SSL/TLS</string>
    <string name="ftp_ssltls_summary">None, SSL or TLS. Use none for regular unsecured connections.</string>
    <string name="ftp_implicit">Implicit FTP over SSL</string>
    <string name="ftp_test_summary">Upload a test file to the FTP server</string>
    <string name="sftp_setup_title">SFTP</string>
    <string name="sftp_private_key_path">Private key</string>
    <string name="sftp_private_key_passphrase">Private key passphrase</string>
    <string name="sftp_validate_test_upload">Validate host key and test upload</string>
    <string name="menu_faq">Help and FAQ</string>
    <string name="log_customurl_title">Log to custom URL</string>
    <string name="log_customurl_summary">Send logging info to your own server over HTTP</string>
    <string name="gnsslogger_folder_title">Save to folder</string>
    <string name="gnsslogger_folder_summary">Where to save the log files to, defaults to /sdcard/GNSSLogger</string>
    <string name="ftp_directory">Folder</string>
    <string name="new_file_custom_message">You can use %SER for device serial, %YEAR, %MONTH, %MONTHNAME, %DAY, %DAYNAME, %HOUR, %MIN, %PROFILE, %VER for version</string>
    <string name="new_file_prefix_serial_title">Prefix unique string to the file name</string>
    <string name="new_file_prefix_serial_summary">On Android 8 onwards, a unique Android ID is used. Pre-Android 8, the build serial number, found in your phone status, is used.</string>
    <string name="menu_onepoint">Log one point</string>
    <string name="view_log">Log View</string>
    <string name="accuracy_filter_title">Accuracy Filter</string>
    <string name="accuracy_filter_summary">The minimum precision required for a point to be saved. Points that aren\'t this accurate will be discarded.</string>
    <string name="distance_filter_title">Distance filter</string>
    <string name="distance_filter_summary">The minimum distance required between current and previous for a point to be saved, otherwise the point will be discarded.</string>
    <string name="pref_filedetails_title">File and Folder Details</string>
    <string name="absolute_timeout_title">Absolute time to GPS fix</string>
    <string name="absolute_timeout_summary">Number of seconds after which the app gives up on trying to acquire a fix, regardless of other settings. This is especially useful for when you are inside buildings to prevent the GPS from draining battery.  Set to 0 for no timeout.</string>
    <string name="log_nmea_title">Log to NMEA</string>
    <string name="log_nmea_summary">Creates a raw NMEA file while trying to get a fix. This file grows very quickly. Only works while GPS is being used.</string>
    <string name="listeners_gps_title">Log GPS/GNSS locations</string>
    <string name="listeners_gps_summary">Logs locations provided by the satellite based location receiver on your device</string>
    <string name="listeners_cell_title">Log network locations</string>
    <string name="listeners_cell_summary">Logs locations provided by the network based location receiver on your device</string>
    <string name="listeners_passive_title">Log passive locations</string>
    <string name="listeners_passive_summary">Logs locations obtained from other apps, but note that most filters are ignored. This setting is also useful for external GPS receivers.</string>
    <string name="autoUpload_frequency_hint">Number of minutes</string>
    <string name="new_file_custom_each_time_title">Ask for a file name on every start</string>
    <string name="new_file_custom_each_time_summary">Prompt for a custom file name each time the logging is started</string>
    <string name="new_file_custom_keep_changing_title">Allow custom file name to change dynamically</string>
    <string name="new_file_custom_keep_changing_summary">As custom file name values change, let the current file name change. For example, if %HOUR is used, a new file is created every hour. Uncheck if you want it to remain static.</string>
    <string name="hide_notification_buttons">Hide notification buttons</string>
    <string name="restart_required">You will need to restart GNSSLogger for this setting to take effect</string>
    <string name="pref_performance_activityrecognition">Activity Recognition</string>
    <string name="activityrecognition_dont_log_if_still">Don\'t log if I\'m not moving</string>
    <string name="activityrecognition_dont_log_if_still_summary">If there is no accelerometer movement since the last point, active logging will pause for your logging interval, even if you start moving before then. Passive points may still be logged.</string>
    <string name="altitude_subtract_geoid_height_summary">Uses Mean Sea Level (MSL) instead of WGS84 height by subtracting geoidheight from GPS altitude. Only applies to GPS satellite points, not network or NMEA.</string>
    <string name="altitude_subtract_geoid_height_title">Use MSL instead of WGS84</string>
    <string name="altitude_subtract_offset_title">Subtract altitude offset</string>
    <string name="altitude_subtract_offset_summary">A value in meters to subtract from GPS altitudes. Use a negative number to add a value to the altitude. Only applies to GPS satellite points, not network or NMEA.</string>
    <string name="autoUpload_wifi_only_title">Send on Wi-Fi only</string>
    <string name="gnsslogger_permissions_rationale_title">Permissions required</string>
    <string name="debuglog_attach_to_email">Attach debug log to email</string>
    <string name="debuglog_attach_to_email_summary">Attaches debug log to an email along with some diagnostic information</string>
    <string name="change_language_title">Change language</string>
    <string name="change_language_summary">Not all languages are fully translated! You must restart the app for the settings to take effect.</string>
    <string name="coordinate_display_format">Coordinates display format</string>
    <string name="ssl_certificate_validate">Validate SSL Certificate</string>
    <string name="hide_notification_from_status_bar">Hide notification from status bar</string>
    <string name="log_dis_title">Log to IEE1278(DIS) </string>
    <string name="log_dis_summary">Send logging info to a IEE1278 network over UDP</string>
    <string name="log_eag_summary">Logs locations to a European Air Group (EAG) file format</string>
    <string name="log_eag_title">Log to EAG</string>
</resources>