<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="sftp_preferences">

    <SwitchPreferenceCompat
        android:key="sftp_enabled"
        android:title="@string/autoUpload_enabled" />

    <EditTextPreference
        android:defaultValue="127.0.0.1"
        android:dialogTitle="@string/ftp_useftps_summary"
        android:inputType="text"
        android:key="sftp_host"
        android:title="@string/ftp_useftps" />


    <EditTextPreference
        android:defaultValue="22"
        android:dialogTitle="@string/ftp_port"
        android:inputType="number"
        android:key="sftp_port"
        android:title="@string/ftp_port" />

    <EditTextPreference
        android:defaultValue="/tmp"
        android:dialogTitle="@string/ftp_directory"
        android:inputType="text"
        android:key="sftp_remote_server_path"
        android:title="@string/ftp_directory" />

    <EditTextPreference
        android:dialogTitle="@string/ftp_username"
        android:inputType="text"
        android:key="sftp_user"
        android:title="@string/ftp_username" />

    <EditTextPreference
        android:dialogTitle="@string/ftp_password"
        android:inputType="numberPassword"
        android:key="sftp_password"
        android:title="@string/ftp_password" />

    <EditTextPreference
        android:hint="/storage/emulated/0/Download/privatekey"
        android:inputType="text"
        android:key="sftp_private_key_path"
        android:title="@string/sftp_private_key_path" />

    <EditTextPreference
        android:dialogTitle="@string/sftp_private_key_passphrase"
        android:inputType="numberPassword"
        android:key="sftp_private_key_passphrase"
        android:title="@string/sftp_private_key_passphrase" />


    <Preference
        android:key="sftp_reset_authorisation"
        android:title="@string/osm_resetauth" />


    <Preference
        android:key="sftp_validateserver"
        android:title="@string/sftp_validate_test_upload" />

</androidx.preference.PreferenceScreen>