<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnuViewLog"
        android:icon="@drawable/log_view"
        android:title="@string/view_log"
        app:showAsAction="always" />

    <item
        android:id="@+id/mnuDisSettings"
        android:icon="@drawable/dis"
        android:title="@string/menu_onepoint"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/file_upload"
        android:title="@string/menu_upload"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/mnuAutoSendNow"
                android:title="@string/menu_autoUpload_now" />
        </menu>
    </item>
    <item
        android:id="@+id/mnuAnnotate"
        android:icon="@drawable/annotate2"
        android:title="@string/menu_annotate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnuShare"
        android:icon="@drawable/share"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/mnuSFTP"
                android:title="@string/sftp_setup_title" />
            <item
                android:id="@+id/mnuFtp"
                android:title="@string/ftp_setup_title" />
        </menu>
    </item>
</menu>